update resource cards

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -529,18 +529,18 @@ practices is the key to accessible color selection.
       href="https://www.ibm.com/design/language/color#accessibility"
       >
 
-![Bee Icon](../images/resource-cards/bee.png)
+<MdxIcon name="bee" />
 
   </ResourceCard>
 </Column>
 <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      subTitle="IBM Accessibility"
+      subTitle="IBM Accessibility: Color and Contrast"
       aspectRatio="2:1"
       href="https://www.ibm.com/able/toolkit/design/visual/color-and-contrast"
       >
 
-![Bee Icon](../images/resource-cards/bee.png)
+<MdxIcon name="bee" />
 
   </ResourceCard>
 </Column>
