docs: v11 size updates for accordion (#2378)
* docs: v11 size updates for accordion

This PR add the sizes on the Style tab for the accordion component.

* Update style.mdx

* added anchor links

--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -7,6 +7,15 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
+<AnchorLinks>
+
+<AnchorLink>Color</AnchorLink>
+<AnchorLink>Typography</AnchorLink>
+<AnchorLink>Structure</AnchorLink>
+<AnchorLink>Sizes</AnchorLink>
+
+</AnchorLinks>
+
 ## Color
 
 | Class                     | Property   | Color token      |
@@ -89,3 +98,14 @@ of the accordion panel.
 | > 640           | 25%          | –             |
 | 420-640px       | 64px / 4rem  | `$spacing-10` |
 | < 420           | 16px / 1rem  | `$spacing-05` |
+
+## Sizes
+
+| Element         | Size         | Height (px/rem) |
+| --------------- | ------------ | ------------ |
+| Header          | Small (sm)   | 32 / 2         |
+|                 | Medium (md)  | 40 / 2.5       |
+|                 | Large (lg)   | 48 / 3         |
+
+
+
