--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -21,14 +21,14 @@ inline theming to the shell zone.
 
 ### Menu
 
-| Element | State   | Property         | Color token          |
-| ------- | ------- | ---------------- | -------------------- |
-| Menu    | Enabled | svg              | `$icon-primary`      |
-|         | Hover   | background color | `$background-hover`  |
-|         |         | svg              | `$icon-primary`      |
-|         | Focus   | border           | `$focus`             |
-|         | Active  | background color | `$background-active` |
-|         |         | svg              | `$icon-primary`      |
+| State   | Property         | Color token          |
+| ------- | ---------------- | -------------------- |
+| Enabled | svg              | `$icon-primary`      |
+| Hover   | background color | `$background-hover`  |
+|         | svg              | `$icon-primary`      |
+| Focus   | border           | `$focus`             |
+| Active  | background color | `$background-active` |
+|         | svg              | `$icon-primary`      |
 
 <Row>
 <Column colLg={8}>
@@ -42,14 +42,14 @@ inline theming to the shell zone.
 
 ### Header link
 
-| Element | State   | Property         | Color token          |
-| ------- | ------- | ---------------- | -------------------- |
-| Link    | Enabled | text color       | `$text-secondary`    |
-|         | Hover   | background color | `$background-hover`  |
-|         |         | text color       | `$text-primary`      |
-|         | Focus   | border           | `$focus`             |
-|         | Active  | background color | `$background-active` |
-|         |         | text color       | `$text-primary`      |
+| State   | Property         | Color token          |
+| ------- | ---------------- | -------------------- |
+| Enabled | text color       | `$text-secondary`    |
+| Hover   | background color | `$background-hover`  |
+|         | text color       | `$text-primary`      |
+| Focus   | border           | `$focus`             |
+| Active  | background color | `$background-active` |
+|         | text color       | `$text-primary`      |
 
 <Row>
 <Column colLg={8}>
@@ -95,17 +95,17 @@ inline theming to the shell zone.
 
 ### Header actions
 
-| Element | State    | Property         | Color token          |
-| ------- | -------- | ---------------- | -------------------- |
-| Action  | Enabled  | svg              | `$icon-secondary`    |
-|         | Hover    | background color | `$background-hover`  |
-|         |          | svg              | `$icon-primary`      |
-|         | Focus    | border           | `$focus`             |
-|         | Active   | background color | `$background-active` |
-|         |          | svg              | `$icon-primary`      |
-|         | Selected | background color | `$layer`             |
-|         |          | border           | `$border-subtle`     |
-|         |          | svg              | `$icon-primary`      |
+| State    | Property         | Color token          |
+| -------- | ---------------- | -------------------- |
+| Enabled  | svg              | `$icon-secondary`    |
+| Hover    | background color | `$background-hover`  |
+|          | svg              | `$icon-primary`      |
+| Focus    | border           | `$focus`             |
+| Active   | background color | `$background-active` |
+|          | svg              | `$icon-primary`      |
+| Selected | background color | `$layer`             |
+|          | border           | `$border-subtle`     |
+|          | svg              | `$icon-primary`      |
 
 <Row>
 <Column colLg={8}>
