--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -30,13 +30,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |          | Icon                  | svg              | `$icon-primary`                                |
 |          | Background            | border-bottom    | `$interactive`                                 |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Example of selected and enabled line tabs..](images/tab-style-1.png)
+![Example of selected and enabled line tabs](images/tab-style-1.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>Example of selected and enabled line tabs.</Caption>
 
@@ -64,28 +62,26 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                | Icon                  | svg              | `$icon-disabled`    |
 |                | Background            | background-color | `$icon-disabled`    |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Examples of hover, focus-enabled, focus-selected, and disabled states.](images/tab-style-3.png)
+![Examples of hover, focus-enabled, focus-selected, and disabled states](images/tab-style-3.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>
-  Examples of hover, focus-enabled, focus-selected, and disabled states.
+  Examples of hover, focus-enabled, focus-selected, and disabled states for line
+  tabs.
 </Caption>
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Examples of enabled, hover, active, and focus states for scrollable tabs.](images/tab-style-4.png)
+![Examples of enabled, hover, active, and disabled states for scrollable line tabs](images/tab-style-4.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>
-  Examples of enabled, hover, active, and focus states for scrollable tabs.
+  Examples of enabled, hover, active, and disabled states for scrollable line
+  tabs.
 </Caption>
 
 ### Contained tabs
@@ -102,15 +98,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |          | Icon            | svg              | `$icon-primary`       |
 |          | Background      | border-top       | `$border-interactive` |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Selected and enabled contained tabs](images/tab-style-2.png)
+![Examples of selected and enabled contained tabs](images/tab-style-2.png)
 
-</Column>
-</Row>
+</div>
 
-<Caption>Examples of selected and enabled contained tabs.</Caption>{' '}
+<Caption>Examples of selected and enabled contained tabs.</Caption>
 
 <br />
 
@@ -137,26 +131,22 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                | Background            | background-color | `$icon-disabled`       |
 |                | Border                | border-right     | `$border-disabled`     |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Examples of hover, focus-enabled, focus-selected, and disabled states.](images/tab-style-5.png)
+![Hover, focus-enabled, focus-selected, and disabled states for contained
+tabs.](images/tab-style-5.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>
-  Examples of hover, focus-enabled, focus-selected, and disabled states for
-  contained tabs.
+  Hover, focus-enabled, focus-selected, and disabled states for contained tabs.
 </Caption>
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Examples of enabled, hover, active, and focus states for contained scrollable tabs.](images/tab-style-6.png)
+![Enabled, hover, active, and focus states for contained scrollable tabs.](images/tab-style-6.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>
   Examples of enabled, hover, active, and focus states for contained scrollable
@@ -189,13 +179,11 @@ Tab label should be set in sentence case, and should not exceed three words.
 |                 | svg                         | 16 x 16    | —             |
 | Scrollable icon | svg                         | 16 x 16    | —             |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Structure and spacing measurements for line tabs in px and rem](images/tab-style-7.png)
+![Structure and spacing measurements for line tabs.](images/tab-style-7.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>Structure and spacing measurements for line tabs | px / rem</Caption>
 
@@ -212,13 +200,11 @@ Tab label should be set in sentence case, and should not exceed three words.
 | Tab (lg) | height, width | 48 / 3   | —             |
 |          | svg           | 20 x 20  | —             |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
 ![Structure and spacing measurements for line tabs in px and rem](images/tab-style-7b.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>
   Structure and spacing measurements for icon-only line tabs | px / rem
@@ -239,13 +225,11 @@ Tab label should be set in sentence case, and should not exceed three words.
 | Scrollable icon       | svg                         | 16 x 16          | —             |
 | Scrollable background | border-right, border-left   | 1px              | —             |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Structure and spacing measurements for line tabs in px and rem](images/tab-style-8.png)
+![Structure and spacing measurements for contained tabs in px and rem](images/tab-style-8.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>
   Structure and spacing measurements for contained tabs | px / rem
@@ -262,13 +246,12 @@ Tab label should be set in sentence case, and should not exceed three words.
 | Tab (lg) | height, width | 48 / 3   | —             |
 |          | svg           | 20 x 20  | —             |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![Structure and spacing measurements for contained tabs in px and rem](images/tab-style-8b.png)
+![Structure and spacing measurements for icon-only contained tabs in px and
+  rem](images/tab-style-8b.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>
   Structure and spacing measurements for icon-only contained tabs | px / rem
