added anchor links

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -95,12 +95,12 @@ The layering model differs between the _light_ and _dark_ themes.
 Carbon uses tokens and themes to manage color. Tokens are role-based, and themes
 specify the color values that serve those roles in the UI.
 
-| Term    | Definition                                                                                                                                                                                  |     |
-| ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
-| _Theme_ | A collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
-| _Token_ | The role-based identifier that assigns a color. Used instead of a hex code. Tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.              |     |
-| _Role_  | The systematic usage(s) of a color. Roles cannot be changed between themes.                                                                                                                 |     |
-| _Value_ | The unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |
+| Term                                                    | Definition                                                                                                                                                                                  |     |
+| ------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
+| [Theme](/guidelines/color/overview/#themes)             | A collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
+| [Token](/guidelines/color/overview/#tokens)             | The role-based identifier that assigns a color. Used instead of a hex code. Tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.              |     |
+| [Role](/guidelines/color/overview/#color-roles)         | The systematic usage(s) of a color. Roles cannot be changed between themes.                                                                                                                 |     |
+| [Value](/guidelines/color/overview/#interaction-states) | The unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |
 
 ### Themes
 
@@ -169,7 +169,7 @@ layering model.
 
 <br />
 
-### Light themes
+#### Light themes
 
 There are two light themes: White and Gray 10. In the light themes, layers
 alternate between White and Gray 10. For enabled UI colors light themes
@@ -184,12 +184,12 @@ All of the themes are available in
 [Design kits](https://carbondesignsystem.com/designing/kits/sketch/).
 
 <DoDontRow>
-  <DoDont caption="Gray 10 dropdown on White background." colLg={6}>
+  <DoDont caption="Gray 10 dropdown on White background." colLg={4}>
 
 ![Gray 10 dropdown on White background.](images/Light_theme_01.png)
 
   </DoDont>
-  <DoDont colLg={6} caption="White dropdown on a Gray 10 background.">
+  <DoDont colLg={4} caption="White dropdown on a Gray 10 background.">
 
 ![White dropdown on a Gray 10 background.](images/Light_theme_02.png)
 
@@ -197,12 +197,12 @@ All of the themes are available in
 </DoDontRow>
 
 <DoDontRow>
-  <DoDont colLg={6} caption="White overflow menu on Gray 10 card.">
+  <DoDont colLg={4} caption="White overflow menu on Gray 10 card.">
 
 ![White overflow menu on Gray 10 card.](images/Light_theme_03.png)
 
   </DoDont>
-  <DoDont type="dont" colLg={6} caption="Avoid use of midtones.">
+  <DoDont type="dont" colLg={4} caption="Avoid use of midtones.">
 
 ![Avoid use of midtones.](images/Light_theme_04.png)
 
@@ -215,7 +215,7 @@ All of the themes are available in
 
 <br />
 
-### Dark themes
+#### Dark themes
 
 There are two dark themes: Gray 90 and Gray 100. In the dark themes, layers
 become one step lighter with each added layer. For enabled UI colors dark themes
@@ -231,13 +231,13 @@ All of the themes are available in
 
 <DoDontRow>
   <DoDont
-    colLg={6}
+    colLg={4}
     caption="Gray 90 dropdown on Gray 100 background.">
 
 ![Gray 10 dropdown on White background.](images/Dark_theme_01_new.png)
 
   </DoDont>
-  <DoDont colLg={6} caption="Gray 80 dropdown on Gray 90 background.">
+  <DoDont colLg={4} caption="Gray 80 dropdown on Gray 90 background.">
 
 ![White dropdown on a Gray 10 background.](images/Dark_theme_02_new.png)
 
@@ -246,13 +246,13 @@ All of the themes are available in
 
 <DoDontRow>
   <DoDont
-    colLg={6}
+    colLg={4}
     caption="Gray 70 is sometimes used when compound components are being applied, such as an overflow menu.">
 
 ![White overflow menu on Gray 10 card.](images/Dark_theme_03_new.png)
 
   </DoDont>
-  <DoDont type="dont" colLg={6} caption="Do not apply components that are darker than the background unless using high-contrast mode.">
+  <DoDont type="dont" colLg={4} caption="Do not apply components that are darker than the background unless using high-contrast mode.">
 
 ![Do not apply components that are darker than the background unless using high-contrast mode.](images/Dark_theme_04_new.png)
 
@@ -267,7 +267,7 @@ All of the themes are available in
 
 <br />
 
-### High contrast
+#### High contrast
 
 In some cases, it is helpful to apply light components to dark backgrounds or
 dark components to light backgrounds. This technique is useful to focus
