--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -170,14 +170,14 @@ Tab label should be set in sentence case, and should not exceed three words.
 | --------------- | --------------------------- | ---------- | ------------- |
 | Tab             | height                      | 40 / 2.5   | –             |
 |                 | border-bottom               | 2px        | –             |
-|                 | width                       | auto-width | —             |
-|                 | margin-left                 | 1px        | —             |
+|                 | width                       | auto-width | –             |
+|                 | margin-left                 | 1px        | –             |
 | Label           | padding-left, padding-right | 16 / 1     | `$spacing-05` |
 |                 | padding-top, padding-bottom | 8 / 0.5    | `$spacing-03` |
 | Icon            | padding-right               | 16 / 1     | `$spacing-05` |
 |                 | padding-left                | 8 / 0.5    | `$spacing-03` |
-|                 | svg                         | 16 x 16    | —             |
-| Scrollable icon | svg                         | 16 x 16    | —             |
+|                 | svg                         | 16 x 16    | –             |
+| Scrollable icon | svg                         | 16 x 16    | –             |
 
 <div className="image--fixed">
 
@@ -197,8 +197,8 @@ Tab label should be set in sentence case, and should not exceed three words.
 | -------- | ------------- | -------- | ------------- |
 | Tab (md) | height, width | 40 / 2.5 | –             |
 |          | svg           | 16 x 16  | –             |
-| Tab (lg) | height, width | 48 / 3   | —             |
-|          | svg           | 20 x 20  | —             |
+| Tab (lg) | height, width | 48 / 3   | –             |
+|          | svg           | 20 x 20  | –             |
 
 <div className="image--fixed">
 
@@ -220,10 +220,10 @@ Tab label should be set in sentence case, and should not exceed three words.
 | Label                 | padding-left, padding-right | 16 / 1           | `$spacing-05` |
 | Icon                  | padding-right               | 16 / 1           | `$spacing-05` |
 |                       | padding-left                | 16 / 1           | `$spacing-05` |
-|                       | svg                         | 16 x 16          | —             |
-| Tab                   | border-right                | 1px              | —             |
-| Scrollable icon       | svg                         | 16 x 16          | —             |
-| Scrollable background | border-right, border-left   | 1px              | —             |
+|                       | svg                         | 16 x 16          | –             |
+| Tab                   | border-right                | 1px              | –             |
+| Scrollable icon       | svg                         | 16 x 16          | –             |
+| Scrollable background | border-right, border-left   | 1px              | –             |
 
 <div className="image--fixed">
 
@@ -243,8 +243,8 @@ Tab label should be set in sentence case, and should not exceed three words.
 
 | Element  | Property      | px / rem | Spacing token |
 | -------- | ------------- | -------- | ------------- |
-| Tab (lg) | height, width | 48 / 3   | —             |
-|          | svg           | 20 x 20  | —             |
+| Tab (lg) | height, width | 48 / 3   | –             |
+|          | svg           | 20 x 20  | –             |
 
 <div className="image--fixed">
 
