--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -99,3 +99,4 @@ and any proper nouns capitalized. Select text should be three words or less.
 | -------------------- | --------------------------- | ------------------ | 
 | Input                | Small (sm)                  | 32 / 2             | 
 |                      | Medium (md)                 | 40 / 2.5           |
+|                      | Large (lg)                  | 48 / 3             |
