--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -372,13 +372,15 @@ pressing right or left arrow keys. For additional keyboard interactions, see the
 
 #### Screenreader
 
-VoiceOver: Users can navigate between tabs by pressing right or left arrow keys.
+VoiceOver: Users can navigate between tabs by pressing `right` or `left` arrow
+keys.
 
-JAWS: Users can navigate between tabs by pressing right or left arrow keys.
+JAWS: Users can navigate between tabs by pressing `right` or `left` arrow keys.
 
-NVDA: Users can navigate between tabs by pressing right or left arrow keys.
+NVDA: Users can navigate between tabs by pressing `right` or `left` arrow keys.
 
-For additional information, see screen reader tests.
+For additional information, see
+[tab accessibility](https://carbondesignsystem.com/components/tabs/accessibility).
 
 ## Modifiers
 
