--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -379,8 +379,8 @@ JAWS: Users can navigate between tabs by pressing `right` or `left` arrow keys.
 
 NVDA: Users can navigate between tabs by pressing `right` or `left` arrow keys.
 
-For additional information, see
-[tab accessibility](https://carbondesignsystem.com/components/tabs/accessibility).
+For additional information, see the
+[Accessibility tab](https://carbondesignsystem.com/components/tabs/accessibility).
 
 ## Modifiers
 
