--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -101,8 +101,8 @@ should be three words or less.
 
 ## Sizes 
 
-| Size        | Height (px / rem)  |
-| ----------- | ------------------ | 
-| Small (sm)  | 32 / 2             |
-| Medium (md) | 40 / 2.5           |
-| Large (lg)  | 48 / 3             |
+| Element     | Size        | Height (px / rem)  |
+| ----------  | ----------- | ------------------ | 
+| Input       | Small (sm)  | 32 / 2             |
+|             | Medium (md) | 40 / 2.5           |
+|             | Large (lg)  | 48 / 3             |
