docs: v11 size token updates for Text input component (#2387)
* docs: v11 size token updates for Text input component

This PR updates the size tokens on the Style tab for the Text input component.

* Update style.mdx

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -71,14 +71,6 @@ should be three words or less.
 
 <br />
 
-<Title> Sizes </Title>
-
-| Size    | Element | Property | px / rem |
-| ------- | ------- | -------- | -------- |
-| Small   | Field   | height   | 32 / 2   |
-| Default | Field   | height   | 40 / 2.5 |
-| XL      | Field   | height   | 48 / 3   |
-
 <div className="image--fixed">
 
 ![Structure and spacing measurements for text input](images/text-input-style-2.png)
@@ -106,3 +98,11 @@ should be three words or less.
 </div>
 
 <Caption>Structure and spacing measurements for text area | px / rem</Caption>
+
+## Sizes 
+
+| Element     | Size        | Height (px / rem)  |
+| ----------  | ----------- | ------------------ | 
+| Input       | Small (sm)  | 32 / 2             |
+|             | Medium (md) | 40 / 2.5           |
+|             | Large (lg)  | 48 / 3             |
