fix tab order for form style

--- a/src/pages/components/form/style.mdx
+++ b/src/pages/components/form/style.mdx
@@ -3,7 +3,7 @@ title: Form
 description:
   Forms are used for submitting data. Consider each field and what value the
   data will provide.
-tabs: ['Code', 'Usage', 'Style', ' Accessibility']
+tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
 ## Color
