--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -95,11 +95,11 @@ other components may still expand to the full width of a modal window.
 
 ## Sizes
 
-There are four modal sizes: extra small, small, medium, and large. Each modal size has a
-responsive width that changes based on the browser size. As the browser
-decreases, the modal width percentage increases thus maintaining a proper ratio
-between the modal and browser. Modal widths are defined as percentages of the
-browser but will still align to columns on the 2x grid.
+There are four modal sizes: extra small, small, medium, and large. Each modal
+size has a responsive width that changes based on the browser size. As the
+browser decreases, the modal width percentage increases thus maintaining a
+proper ratio between the modal and browser. Modal widths are defined as
+percentages of the browser but will still align to columns on the 2x grid.
 
 <Row>
 <Column colLg={8}>
