--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -236,7 +236,7 @@ recommended by design as the proper distance between buttons.
 ### Sizes
 
 There are six button sizes: small, medium, large productive, large expressive, 
-extra large, and 2xl. The large expressive button is used in editorial and 
+extra large, and 2XL. The large expressive button is used in editorial and 
 digital marketing experiences. See[Button sizes](/components/button/usage#button-sizes) 
 on the Usage tab for more information about specific use cases for each button size.
 
